Add css to hash_browns recipe

--- a/recipes/hash_browns.html
+++ b/recipes/hash_browns.html
@@ -3,24 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <title>Classic Hash Browns</title>
+    <link rel="stylesheet" href="./hash_browns.css" />
 </head>
 <body>
-    <h1>Classic Hash Browns</h1>
-    <img src="../images/hash_browns.jpg" alt="Hash Browns" width="300">
-    <h2>Description</h2>
-    <p>This easy homemade hash brown recipe produces the crispiest results with just a few simple ingredients.</p>
-    <h2>Ingredients</h2>
-    <ul>
-        <li>Potatoes: A starchy potato, such as the russet potato, is perfect for crispy hash browns.</li>
-        <li>Butter: You'll need three tablespoons of clarified butter — here's how to make it at home.</li>
-        <li>Seasonings: These flavorful hash browns are seasoned with cayenne pepper, paprika, salt, and pepper.</li>
-    </ul>
-    <h2>Steps</h2>
-    <ol>
-        <li>Shred the potatoes into cold water, stir, drain, and dry well.</li>
-        <li>Cook potatoes in butter, season, and continue cooking until a crust forms on the bottom.</li>
-        <li>Flip and/or stir until the potatoes are browned and crusty all over.</li>
-    </ol>
+    <div id="recipe-container">
+        <h1>Classic Hash Browns</h1>
+        <img src="../images/hash_browns.jpg" alt="Hash Browns" width="300">
+        <h2>Description</h2>
+        <p>This easy homemade hash brown recipe produces the crispiest results with just a few simple ingredients.</p>
+        <h2>Ingredients</h2>
+        <ul>
+            <li>Potatoes: A starchy potato, such as the russet potato, is perfect for crispy hash browns.</li>
+            <li>Butter: You'll need three tablespoons of clarified butter — here's how to make it at home.</li>
+            <li>Seasonings: These flavorful hash browns are seasoned with cayenne pepper, paprika, salt, and pepper.</li>
+        </ul>
+        <h2>Steps</h2>
+        <ol>
+            <li>Shred the potatoes into cold water, stir, drain, and dry well.</li>
+            <li>Cook potatoes in butter, season, and continue cooking until a crust forms on the bottom.</li>
+            <li>Flip and/or stir until the potatoes are browned and crusty all over.</li>
+        </ol>
+    </div>
     <a href="../index.html">Back to home</a> 
 </body>
 </html>
