Add more css changes

--- a/recipes/hash_browns.html
+++ b/recipes/hash_browns.html
@@ -23,7 +23,10 @@
             <li>Cook potatoes in butter, season, and continue cooking until a crust forms on the bottom.</li>
             <li>Flip and/or stir until the potatoes are browned and crusty all over.</li>
         </ol>
+        <button class="home_button">
+            <a href="../index.html">Back to home</a>
+        </button>
     </div>
-    <a href="../index.html">Back to home</a> 
+    
 </body>
 </html>
